# finam

./: .gitignore  .gitmodules  Cargo.toml  README.md  update.sh
generator/: Cargo.toml
generator/src/: main.rs
src/: api.auth.rs  api.orders.rs  api.rs  google.r#type.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  grpc.tradeapi.v1.accounts.rs  grpc.tradeapi.v1.assets.rs  grpc.tradeapi.v1.auth.rs  grpc.tradeapi.v1.marketdata.rs  grpc.tradeapi.v1.orders.rs  grpc.tradeapi.v1.rs  lib.rs  mod.rs  proto.rs
