[package]
name = "finam"
version = "0.9.0"
edition = "2024"
authors = ["Artem Evsevev <artem@qrsoft.ru>"]
description = "SDK для работы с API Финам"
license = "MIT"
readme = "README.md"
repository = "https://github.com/artemevsevev/finam"
keywords = ["trading", "finam", "sdk", "api"]
categories = ["finance"]
exclude = ["finam-trade-api/*", "googleapis/*"]

[dependencies]
log = "0.4.29"
prost = "0.14.3"
prost-types = "0.14.3"
thiserror = "2.0.18"
tokio = "1.49.0"
tonic = { version = "0.14.2", features = [
    "tls-ring",
    "tls-native-roots",
    "gzip",
] }
tonic-prost = { version = "0.14.2" }

[dev-dependencies]
env_logger = "0.11.8"
tokio = { version = "1.49.0", features = ["full"] }
